refactor:api photo spec
